Refine project structure